--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint --fix --ext .js,.vue --ignore-path .gitignore .",
-    "precommit": "eslint --fix --ext .js,.vue --ignore-path .gitignore ."
+    "precommit": "eslint . --ext .json --ext .js"
   },
   "repository": {
     "type": "git",
@@ -15,6 +15,13 @@
   "license": "ISC",
   "devDependencies": {
     "eslint": "^4.3.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-json": "1.2.1",
+    "eslint-plugin-standard": "^3.0.1",
+    "eslint-plugin-promise": "^3.7.0",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-config-standard": "^10.2.1",
+    "husky": "0.14.3",
     "prettier": "1.12.0"
   },
   "prettier": {
